using UnityEngine;
using System.Collections.Generic;
using UnityEngine.InputSystem; 
using System.Linq; // [ìœ ë‹ˆ] ë¦¬ìŠ¤íŠ¸ í•„í„°ë§ì„ ìœ„í•´ ì¶”ê°€í–ˆì–´!

namespace UI
{
    [System.Serializable]
    public struct PortraitInfo
    {
        public string key; // CSVì— ì ì„ í‚¤ì›Œë“œ (ì˜ˆ: "Yuni_Smile")
        public Sprite sprite; // ì‹¤ì œ ì´ë¯¸ì§€
        public AudioClip typingSound; // [ìœ ë‹ˆ] ëŒ€ì‚¬ì¹  ë•Œ ë‚˜ëŠ” ì†Œë¦¬ (ì—†ìœ¼ë©´ ê¸°ë³¸ê°’)
    }

    public class DialogueTester : MonoBehaviour
    {
        // [ìœ ë‹ˆ] ì–´ë””ì„œë“  ë¶€ë¥¼ ìˆ˜ ìˆê²Œ ì‹±ê¸€í†¤ íŒ¨í„´ ì¶”ê°€! ğŸ“¢
        public static DialogueTester Instance { get; private set; }

        [Header("Settings")]
        [SerializeField] private DialogueUI dialogueUI;
        [SerializeField] private TextAsset csvFile; // CSV íŒŒì¼ ë„£ëŠ” ê³³
        [SerializeField] private bool playTestOnStart = false; // [ìœ ë‹ˆ] ì‹œì‘í•  ë•Œ í…ŒìŠ¤íŠ¸í• ì§€ ì—¬ë¶€

        [Header("Data")]
        [SerializeField] private List<PortraitInfo> portraitDatabase; // ì¸ìŠ¤í™í„° ì…ë ¥ìš©
        
        // [ìœ ë‹ˆ] ê²€ìƒ‰ ì†ë„ë¥¼ ìœ„í•´ ë”•ì…”ë„ˆë¦¬ë¡œ ë³€í™˜! (ë¦¬ìŠ¤íŠ¸ë³´ë‹¤ í›¨ì”¬ ë¹¨ë¼!)
        private Dictionary<string, PortraitInfo> _portraitDic = new Dictionary<string, PortraitInfo>();

        private List<DialogueData> _allDialogueList; // [ìœ ë‹ˆ] ì „ì²´ ëŒ€ë³¸ ì›ë³¸
        private List<DialogueData> _currentQueue;    // [ìœ ë‹ˆ] í˜„ì¬ ì¬ìƒí•  êµ¬ê°„ì˜ ëŒ€ë³¸
        
        private int _currentIndex = -1;
        private GameInput _inputAction; 

        private void Awake()
        {
            // [ìœ ë‹ˆ] ì‹±ê¸€í†¤ ì´ˆê¸°í™”
            if (Instance == null)
            {
                Instance = this;
            }
            else
            {
                Destroy(gameObject); // ì¤‘ë³µ ë°©ì§€
                return;
            }

            _inputAction = new GameInput(); 
            
            // [ìœ ë‹ˆ] ê²Œì„ ì‹œì‘í•  ë•Œ ì´ˆìƒí™” ëª©ë¡ì„ ë”•ì…”ë„ˆë¦¬ë¡œ ì˜®ê²¨ ë‹´ê¸°! (ìµœì í™”)
            foreach (var info in portraitDatabase)
            {
                if (!_portraitDic.ContainsKey(info.key))
                {
                    _portraitDic.Add(info.key, info);
                }
            }
        }

        private void OnEnable()
        {
            _inputAction.UI.Enable(); 
            _inputAction.UI.NextDialogue.performed += OnNextDialogue; 
        }

        private void OnDisable()
        {
            _inputAction.UI.Disable();
            _inputAction.UI.NextDialogue.performed -= OnNextDialogue;
        }

        private void Start()
        {
            if (csvFile != null)
            {
                // 1. ì „ì²´ CSV íŒŒì‹± (í•œ ë²ˆë§Œ í•¨)
                _allDialogueList = DialogueParser.Parse(csvFile.text);
                
                // 2. [í…ŒìŠ¤íŠ¸] ì›í•˜ëŠ” êµ¬ê°„ ì‹¤í–‰! (ì¼œì ¸ ìˆì„ ë•Œë§Œ)
                if (playTestOnStart)
                {
                    PlayDialogueRange(1, 5);
                }
            }
            else
            {
                Debug.LogWarning("CSV íŒŒì¼ ì—°ê²° ì˜¤ë¥˜ ì¸ìŠ¤í™í„° í™•ì¸");
            }
        }

        // [ìœ ë‹ˆ] íŠ¹ì • êµ¬ê°„(StartID ~ EndID)ë§Œ ê³¨ë¼ì„œ ì¬ìƒí•˜ëŠ” í•¨ìˆ˜ì•¼!
        public void PlayDialogueRange(int startId, int endId)
        {
            if (_allDialogueList == null) return;

            // ID ë²”ìœ„ì— ë§ëŠ” ëŒ€ì‚¬ë§Œ ì™ì™ ë½‘ì•„ì˜¤ê¸° (LINQ ì‚¬ìš©)
            _currentQueue = _allDialogueList
                .Where(d => d.id >= startId && d.id <= endId)
                .ToList();

            if (_currentQueue.Count > 0)
            {
                _currentIndex = -1;
                NextLine(); // ì²« ëŒ€ì‚¬ ì‹œì‘!
                //Debug.Log($"ëŒ€í™” ì‹œì‘ (ID: {startId} ~ {endId})");
            }
            else
            {
                Debug.LogWarning($"í•´ë‹¹ ë²”ìœ„ì˜ ëŒ€ì‚¬ê°€ ì—†ìŒ (ID: {startId} ~ {endId})");
            }
        }

        private void OnNextDialogue(UnityEngine.InputSystem.InputAction.CallbackContext context)
        {
            if (dialogueUI.IsTyping)
            {
                dialogueUI.SkipTyping(); // íƒ€ì ìŠ¤í‚µ
            }
            else
            {
                NextLine(); // ë‹¤ìŒ ëŒ€í™”
            }
        }

        public void NextLine()
        {
            if (_currentQueue == null || _currentQueue.Count == 0) return;

            _currentIndex++;

            if (_currentIndex < _currentQueue.Count)
            {
                DialogueData data = _currentQueue[_currentIndex];

                // [ìœ ë‹ˆ] ë”•ì…”ë„ˆë¦¬ì—ì„œ ë¹ ë¥´ê²Œ ì°¾ì•„ì˜¤ê¸°!
                PortraitInfo info = GetPortraitInfo(data.portraitKey);

                dialogueUI.Show(data.text, data.side, data.name, info.sprite, info.typingSound);
            }
            else
            {
                EndDialogue();
            }
        }

        private void EndDialogue()
        {
            dialogueUI.Hide();
            _currentIndex = -1; 
            _currentQueue = null; // í ë¹„ìš°ê¸°
            //Debug.Log("êµ¬ê°„ ëŒ€í™” ì¢…ë£Œ!");
        }

        // [ìœ ë‹ˆ] ë”•ì…”ë„ˆë¦¬(Dictionary)ë¥¼ ì¨ì„œ ê²€ìƒ‰ ì†ë„ê°€ ì—„ì²­ ë¹¨ë¼ì¡Œì–´!
        // [ìœ ë‹ˆ] ë”•ì…”ë„ˆë¦¬(Dictionary)ë¥¼ ì¨ì„œ ê²€ìƒ‰ ì†ë„ê°€ ì—„ì²­ ë¹¨ë¼ì¡Œì–´!
        private PortraitInfo GetPortraitInfo(string key)
        {
            if (string.IsNullOrEmpty(key)) return new PortraitInfo();

            if (_portraitDic.TryGetValue(key, out PortraitInfo info))
            {
                return info;
            }
            
            // ëª» ì°¾ìœ¼ë©´ ë¹ˆ ê»ë°ê¸°
            return new PortraitInfo(); 
        }
    }
}
